# OOP-SoSe21-AIN

./: CMakeLists.txt  README.md  test.cpp
01_erste_schritte/: main.cpp
02_klassen_und_objekte/: Point.cpp  main.cpp
03_Konstruktoren_und_Destruktoren/: main.cpp
04_Kopierkonstruktoren/: main.cpp  main.h
05_Destruktoren/: main.cpp  main.h
Aufgaben/02/: main.cpp
Aufgaben/03/: Date.cpp  Date.h  Person.cpp  Person.h  main.cpp
Aufgaben/04/: Friend.cpp  Friend.h  Friends.cpp  Friends.h  main.cpp
Aufgaben/05/: main.cpp
Aufgaben/06/: main.cpp
Aufgaben/07/: Vector3D.cpp  Vector3D.h  main.cpp
Aufgaben/08/: ArrayList.cpp  ArrayList.h  Date.cpp  Date.h  main.cpp
Aufgaben/09/: main.cpp
Aufgaben/10/: main.cpp
Aufgaben/11/: main.cpp
Vorlesungskapitel/02_klassen_und_objekte/: Point.h
Vorlesungskapitel/03_Konstruktoren_und_Destruktoren/: main.cpp
Vorlesungskapitel/04_Kopierkonstruktoren/: main.cpp
Vorlesungskapitel/05_Destruktoren/: main.cpp
Vorlesungskapitel/06_Operatoren/: main.cpp  main.h
Vorlesungskapitel/07_Templates/: main.cpp
Vorlesungskapitel/08_container/: main.cpp
Vorlesungskapitel/10_Polymorphie/: main.cpp
