cmake_minimum_required(VERSION 3.17)
project(OOP)

set(CMAKE_CXX_STANDARD 14)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")

add_executable(01-erste-schritte Vorlesungskapitel/01_erste_schritte/main.cpp)
add_executable(02-klassen_und_objekte Vorlesungskapitel/02_klassen_und_objekte/main.cpp Vorlesungskapitel/02_klassen_und_objekte/Point.cpp)
add_executable(03-konstruktoren_und_destruktoren Vorlesungskapitel/03_Konstruktoren_und_Destruktoren/main.cpp)
add_executable(04-kopierkonstruktoren Vorlesungskapitel/04_Kopierkonstruktoren/main.cpp)
add_executable(05-Destruktoren Vorlesungskapitel/05_Destruktoren/main.cpp)
add_executable(06-Operatoren Vorlesungskapitel/06_Operatoren/main.cpp)
add_executable(aufgabe-01 Aufgaben/01/test.cpp)
add_executable(aufgabe-02 Aufgaben/02/main.cpp)
add_executable(aufgabe-03 Aufgaben/03/main.cpp Aufgaben/03/Date.cpp Aufgaben/03/Person.cpp)
add_executable(aufgabe-04 Aufgaben/04/main.cpp Aufgaben/04/Friends.cpp)
add_executable(aufgabe-05 Aufgaben/05/main.cpp Aufgaben/04/Friends.cpp)
add_executable(aufgabe-06 Aufgaben/06/main.cpp Aufgaben/04/Friends.cpp)
add_executable(aufgabe-07 Aufgaben/07/main.cpp Aufgaben/04/Friends.cpp Aufgaben/07/Vector3D.cpp Aufgaben/07/Vector3D.h)